InsuranceOrg/force-app/main/default/objects/vlocity_ins__FeeSchedule__c/vlocity_ins__FeeSchedule__c.object-meta.xml
<CustomObject>
    <description>Represents the collection of fee schedule used by insurance carriers to pay its service providers and suppliers such as physicians, dentists, ambulance services, clinical laboratory services, and other suppliers.</description>
    <label>Fee Schedule</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fee Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>