InsuranceOrg/force-app/main/default/objects/vlocity_ins__FeeSchedule__c/fields/vlocity_ins__CalculationMatrixId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CalculationMatrixId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fee Schedule Data</label>
    <referenceTo>vlocity_ins__CalculationMatrix__c</referenceTo>
    <relationshipLabel>Fee Schedules</relationshipLabel>
    <relationshipName>FeeSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>