InsuranceOrg/force-app/main/default/objects/vlocity_ins__FeeSchedule__c/fields/vlocity_ins__FeeScheduleCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__FeeScheduleCode__c</fullName>
    <externalId>true</externalId>
    <label>Fee Schedule Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>