InsuranceOrg/force-app/main/default/objects/vlocity_ins__FeeSchedule__c/fields/vlocity_ins__Source__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CMS</fullName>
            </value>
            <value>
                <fullName>Carrier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>